# mathocr

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
evaluation_system/: __init__.py
evaluation_system/config/: __init__.py  settings.py
evaluation_system/core/: __init__.py  data_loader.py  evaluator.py  matcher.py
evaluation_system/utils/: __init__.py  preprocessors.py  validators.py
