[project]
name = "mathocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "evaluate>=0.4.5",
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "pytest>=8.4.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "typing-extensions>=4.14.1",
]
